# datastar-matrix

./: .gitignore  Cargo.toml  README.md
docs/: local-tls.md
openspec/changes/archive/2026-02-18-add-local-tls-web-server/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-18-add-local-tls-web-server/specs/datastar-matrix-sync/: spec.md
openspec/changes/archive/2026-02-18-add-local-tls-web-server/specs/local-tls-web-transport/: spec.md
openspec/changes/archive/2026-02-18-add-local-tls-web-server/specs/sse-matrix-stream/: spec.md
openspec/changes/archive/2026-02-18-data-matrix/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-18-data-matrix/specs/datastar-matrix-sync/: spec.md
openspec/changes/archive/2026-02-18-data-matrix/specs/matrix-state-simulation/: spec.md
openspec/changes/archive/2026-02-18-data-matrix/specs/sse-matrix-stream/: spec.md
openspec/changes/archive/2026-02-18-data-matrix/specs/terminal-matrix-renderer/: spec.md
openspec/changes/archive/2026-02-18-glitch-in-the-matrix/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-18-glitch-in-the-matrix/specs/datastar-matrix-sync/: spec.md
openspec/changes/archive/2026-02-18-glitch-in-the-matrix/specs/matrix-ripple-effects/: spec.md
openspec/changes/archive/2026-02-18-glitch-in-the-matrix/specs/sse-matrix-stream/: spec.md
openspec/changes/archive/2026-02-21-reconcile-datastar-cqrs-events/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-reconcile-datastar-cqrs-events/specs/datastar-matrix-sync/: spec.md
openspec/changes/archive/2026-02-21-reconcile-datastar-cqrs-events/specs/sse-matrix-stream/: spec.md
openspec/changes/archive/2026-02-21-signal-lost/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-signal-lost/specs/datastar-matrix-sync/: spec.md
openspec/changes/archive/2026-02-21-signal-lost/specs/signal-lost-overlay-in-band/: spec.md
openspec/changes/data-matrix/: design.md  proposal.md  tasks.md
openspec/changes/data-matrix/specs/sse-matrix-stream/: spec.md
openspec/changes/data-matrix/specs/terminal-matrix-renderer/: spec.md
openspec/specs/datastar-cqrs-command-contract/: spec.md
openspec/specs/datastar-matrix-sync/: spec.md
openspec/specs/local-tls-web-transport/: spec.md
openspec/specs/matrix-state-simulation/: spec.md
openspec/specs/signal-lost-overlay-in-band/: spec.md
openspec/specs/sse-matrix-stream/: spec.md
openspec/specs/terminal-matrix-renderer/: spec.md
src/: config.rs  frame.rs  glyph.rs  lib.rs  main.rs  simulation.rs  telemetry.rs  terminal.rs  web.rs
