[package]
name = "datastar-matrix"
version = "0.1.0"
edition = "2024"

[features]
default = ["web"]
web = ["dep:axum", "dep:async-stream", "dep:tower-http", "dep:datastar", "dep:axum-server", "dep:rustls", "dep:rcgen"]

[dependencies]
anyhow = "1.0"
async-stream = { version = "0.3", optional = true }
axum = { version = "0.8", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
rand = "0.9"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip"], optional = true }
datastar = { version = "0.3.1", features = ["axum"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
